# ai_product_recommender

./: .gitignore  CLAUDE.md  README.md  shopping-assistant-plan-v2.md
backend/: requirements.txt
backend/app/: config.py  logging_config.py  main.py
backend/app/db/: models.py
backend/app/models/: schemas.py
backend/app/routers/: chat.py  products.py  users.py
backend/app/services/: openai_service.py  pinecone_service.py
backend/data/: shopping_assistant.db
backend/tests/: conftest.py
backend/tests/integration/: test_health.py
backend/tests/unit/: test_db_models.py  test_openai_service.py  test_pinecone_service.py
product_research/: README.md  pyproject.toml  report.md
product_research/knowledge/: user_preference.txt
product_research/src/product_research/: crew.py  main.py
product_research/src/product_research/config/: agents.yaml  tasks.yaml
