[project]
name = "product_research"
version = "0.1.0"
description = "product_research using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0"
]

[project.scripts]
product_research = "product_research.main:run"
run_crew = "product_research.main:run"
train = "product_research.main:train"
replay = "product_research.main:replay"
test = "product_research.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
